use nio in writeFileEncrypted() and writeFileDecrypted() method